--- a/index.html
+++ b/index.html
@@ -113,15 +113,14 @@
 <body>
     <div class="content">
         <div class="header">
-            <h1> Women on banknotes.</h1>
+            <h1> Cash Gap: More Men Than Women on Banknotes.</h1>
             <p class="subhead">Only 21% of banknotes feature a woman.</p>
         </div>
         <div class="byline">
             <p>By <a href="https://somaiyahhafeez.github.io/">Somaiyah Hafeez</a></p>
         </div>
         <p>First paragraph</p>
-        <iframe title="Cash gap: more  men  than  women  on banknotes " aria-label="Stacked Bars" id="datawrapper-chart-gG753" src="https://datawrapper.dwcdn.net/gG753/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="141" data-external="1"></iframe>
-        <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+        <iframe title="Cash gap: more  men  than  women  on banknotes " aria-label="Stacked Bars" id="datawrapper-chart-gG753" src="https://datawrapper.dwcdn.net/gG753/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="105" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
         <p>Second paragraph</p>
         <ul>
