--- a/index.html
+++ b/index.html
@@ -132,19 +132,20 @@
             <img
                 src="https://www.bankofengland.co.uk/-/media/boe/images/banknotes/50/polymer/polymer-50-specimen-front.jpg?h=376&iar=0&w=703&hash=98DDCCEC31EEC367516A5A29E34B57ED">
             <figcaption>Queen Elizabeth II is featured the most.</figcaption>
-        <p> Third paragrapj</p>
-        <iframe title="Currency of change: the top five countries honoring women on money" aria-label="Bar Chart" id="datawrapper-chart-JOJI5" src="https://datawrapper.dwcdn.net/JOJI5/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="266" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+        <p> Third paragraph</p>
+        <iframe title="Currency of change: the top five countries honoring women on money" aria-label="Bar Chart" id="datawrapper-chart-JOJI5" src="https://datawrapper.dwcdn.net/JOJI5/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="266" data-external="1"></iframe>
+        <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
         </figure>
         <iframe title="Where in the world are women featured on banknotes?" aria-label="Map" id="datawrapper-chart-1yCHc" src="https://datawrapper.dwcdn.net/1yCHc/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="417" data-external="1"></iframe>
         <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
-    <div class="content">
-        <p>Fourtg paragraph</p>
-    </div>
-    <iframe title="" aria-label="Table" id="datawrapper-chart-bzBBt" src="https://datawrapper.dwcdn.net/bzBBt/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="636" data-external="1"></iframe>
-    <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-    </script>
+        <p>Fourth paragraph</p>
+        <iframe title="" aria-label="Table" id="datawrapper-chart-bzBBt" src="https://datawrapper.dwcdn.net/bzBBt/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="636" data-external="1"></iframe>
+        <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+        </script>
+
+
     <div class="footer">
         <div class="content">
             <p>You can find the code for this template <a href="https://github.com/jsoma/page-templates/">here</a>.
