--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Women on banknotes. </title>
+    <title> Cash Gap: More Men Than Women on Banknotes </title>
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -144,8 +144,6 @@
         <iframe title="" aria-label="Table" id="datawrapper-chart-bzBBt" src="https://datawrapper.dwcdn.net/bzBBt/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="636" data-external="1"></iframe>
         <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
-
-
     <div class="footer">
         <div class="content">
             <p>You can find the code for this template <a href="https://github.com/jsoma/page-templates/">here</a>.
