--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         }
 
         .banner {
-            background: url('https://w0.peakpx.com/wallpaper/611/604/HD-wallpaper-women-on-banknotes-women-personalities-ephemera-banknotes.jpg') no-repeat center center;
+            background: url('https://i.imgur.com/yqeSxbS.png') no-repeat center center;
             background-size: cover;
-            height: 300px;
+            height: 400px;
             width: 100%;
         }
 
@@ -116,7 +116,7 @@
     <div class="content">
         <div class="header">
             <h1>Cash Gap: More <span style="color: #18a1cd;">Men</span> Than <span style="color: #b26cb4;">Women</span> on Banknotes.</h1>            
-            <p class="subhead">Only 21% of banknotes feature a woman.</p>
+            <p class="subhead">Despite progress in gender equality, banknotes still largely reflect a male-dominated history, with women represented on only a small fraction of currency.</p>
         </div>
         <div class="byline">
             <p>By <a href="https://somaiyahhafeez.github.io/">Somaiyah Hafeez</a></p>
