--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cash Gap: More Men Than Women on Banknotes</title>
+    <title>Cash Gap: more men than women on banknotes</title>
 
     <!-- Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/your-kit-id.css">
     <style>
         body {
             margin: 0;
-            font-size: 20px;
-            font-family: 'Proxima Nova', sans-serif;
+            font-size: 15px;
+            font-family: 'Avenir', sans-serif !important;
             text-rendering: optimizeLegibility;
+            line-height: 1.6; /* Added for consistent line spacing */
         }
 
         .banner {
@@ -24,12 +25,14 @@
         }
 
         .content {
-            max-width: 640px;
-            margin: auto;
+            max-width: 800px; /* Increased the max-width for more space */
+            margin: 0 auto; /* Center-align the content */
+            padding: 0 1.5em; /* Add some padding to the left and right */
         }
 
         .header {
             padding: 3em 0;
+            text-align: center; /* Center-align title */
         }
 
         a {
@@ -60,10 +63,12 @@
             font-weight: bold;
             font-size: 3em;
             line-height: 1.1;
+            text-align: center; /* Center-align title */
         }
 
         .subhead {
-            font-family: 'Proxima Nova', sans-serif;
+            font-family: 'Avenir', sans-serif !important;
+            text-align: center; /* Center-align the subtitle */
         }
 
         iframe,
