--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         body {
             margin: 0;
-            font-size: 15px;
+            font-size: 20px;
             font-family: 'Avenir', sans-serif !important;
             text-rendering: optimizeLegibility;
             line-height: 1.6; /* Added for consistent line spacing */
@@ -25,14 +25,14 @@
         }
 
         .content {
-            max-width: 800px; /* Increased the max-width for more space */
-            margin: 0 auto; /* Center-align the content */
-            padding: 0 1.5em; /* Add some padding to the left and right */
+            max-width: 800px; 
+            margin: 0 auto; 
+            padding: 0 1.5em; 
         }
 
         .header {
             padding: 3em 0;
-            text-align: center; /* Center-align title */
+            text-align: center; 
         }
 
         a {
@@ -63,12 +63,12 @@
             font-weight: bold;
             font-size: 3em;
             line-height: 1.1;
-            text-align: center; /* Center-align title */
+            text-align: center; 
         }
 
         .subhead {
             font-family: 'Avenir', sans-serif !important;
-            text-align: center; /* Center-align the subtitle */
+            text-align: center; 
         }
 
         iframe,
