--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
             align-items: center;
             justify-content: space-between; 
         }
+        figure {
+    margin: 0;
+    padding-bottom: 1.2em;
+    width: 100%;
+    max-width: 100%;
+    display: block;
+}
+
+figure img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    display: block;
+}
+
+figcaption {
+    font-size: 0.8em;
+    text-align: center;
+    margin-top: 0.5em;
+    color: #666;
+    width: 100%;
+}
+
 
 
         h1, h2 {
@@ -121,18 +144,12 @@
                 font-size: 2.5em;
             }
 
-            .map-container {
-                flex-direction: column;
-            }
 
-            .map {
-                max-width: 100%;
-            }
+            figure {
+        margin: 1em 0;
+    }
 
-            .map iframe {
-                height: 400px;
-            }
-        }
+    
 
         a {
             color: #000000;
