--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <!-- Adobe Fonts -->
         <link rel="stylesheet" href="https://use.typekit.net/your-kit-id.css">
     <style>
+                 .banner {
+            background: url('https://i.imgur.com/yqeSxbS.png') no-repeat center center;
+            background-size: cover;
+            height: 400px;
+            width: 100%;
+        }
             body {
             margin: 0;
             font-size: 18px;
@@ -73,8 +79,6 @@ figcaption {
         .footer a {
             color: #f5f5f5;
         }
-        
-
 
         .header-text {
             max-width: 55%;
